// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render according to networkStatus 1`] = `
<div>
  Loading...
</div>
`;

exports[`<Card /> should render according to networkStatus 2`] = `
<div>
  Loading...
</div>
`;

exports[`<Card /> should render according to networkStatus 3`] = `
<article
  role="article"
>
  <h1>
    Test Card
  </h1>
  <div
    className="card"
  >
    <div
      className="card__meta"
    >
      <div>
        <strong>
          Author: 
        </strong>
        John Doe
      </div>
      <div>
        <strong>
          Updated:
        </strong>
         
        1/1/2017
      </div>
    </div>
    <div
      className="addthis_share"
    >
      <div
        className="addthis_button"
      >
        <i
          className="addthis_icon_facebook"
        />
        <div
          className="addthis_share_button"
          data-description="Test Card"
          data-service="facebook"
          data-title="Test Card"
          data-url="https://www.aliemcards.comlocalhost"
        >
          Facebook
        </div>
      </div>
      <div
        className="addthis_button"
      >
        <i
          className="addthis_icon_twitter"
        />
        <div
          className="addthis_share_button"
          data-service="twitter"
          data-title="Test Card"
          data-url="https://www.aliemcards.comlocalhost"
        >
          Twitter
        </div>
      </div>
      <div
        className="addthis_button"
      >
        <i
          className="addthis_icon_email"
        />
        <div
          className="addthis_share_button"
          data-service="email"
          data-title="Test Card"
          data-url="https://www.aliemcards.comlocalhost"
        >
          Email
        </div>
      </div>
    </div>
    <div
      className="card__content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>Hello World</h1>
",
        }
      }
    />
  </div>
</article>
`;

exports[`<Card /> should render with multiple authors and updated date 1`] = `
<article
  role="article"
>
  <h1>
    Test Card
  </h1>
  <div
    className="card"
  >
    <div
      className="card__meta"
    >
      <div>
        <strong>
          Authors: 
        </strong>
        John Doe, Jane Doe
      </div>
      <div>
        <strong>
          Updated:
        </strong>
         
        1/1/2017
      </div>
    </div>
    <div
      className="addthis_share"
    >
      <div
        className="addthis_button"
      >
        <i
          className="addthis_icon_facebook"
        />
        <div
          className="addthis_share_button"
          data-description="Test Card"
          data-service="facebook"
          data-title="Test Card"
          data-url="https://www.aliemcards.comlocalhost"
        >
          Facebook
        </div>
      </div>
      <div
        className="addthis_button"
      >
        <i
          className="addthis_icon_twitter"
        />
        <div
          className="addthis_share_button"
          data-service="twitter"
          data-title="Test Card"
          data-url="https://www.aliemcards.comlocalhost"
        >
          Twitter
        </div>
      </div>
      <div
        className="addthis_button"
      >
        <i
          className="addthis_icon_email"
        />
        <div
          className="addthis_share_button"
          data-service="email"
          data-title="Test Card"
          data-url="https://www.aliemcards.comlocalhost"
        >
          Email
        </div>
      </div>
    </div>
    <div
      className="card__content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>Hello World</h1>
",
        }
      }
    />
  </div>
</article>
`;
